[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "openai>=1.75.0",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.1.3",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "supabase>=2.15.0",
    "ultralytics>=8.3.111",
    "uvicorn[standard]>=0.34.1",
]
